<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_menu_camera"
                android:title="Import"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Gallery"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Slideshow"/>
        <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="Tools"/>
    </group>

    <item android:title="@string/nav_left_title">
        <menu>
            <item
                    android:id="@+id/nav_add_client"
                    android:title="@string/nav_left_title_add_client" android:icon="@drawable/ic_menu_gallery"/>
            <item
                    android:id="@+id/nav_list_clients"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_left_title_list_client"/>
            <item
                    android:id="@+id/nav_search_client"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_left_title_search_client"/>
        </menu>
    </item>

</menu>
